Got it working importing with webpack

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "js-ui-engine-ngx-wrapper",
   "version": "1.0.0",
   "description": "Javascript UI Engine Wrapper for Angular",
-  "main": "bundles/js-ui-engine-wrapper.umd.js",
+  "main": "bundles/js-ui-engine-ngx-wrapper.umd.js",
+  "module": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "author": "Slyke",
   "contributors": [
     "Steven Lawler (Slyke) <steven.lawler777@gmail.com>"
