--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/Slyke/Javascript-UI-Engine-ngx-Wrapper.git"
   },
   "dependencies": {
-    "js-ui-engine": "^1.7.4"
+    "js-ui-engine": "^1.20170407.6"
   },
   "scripts": {
     "init": "npm install",
